manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webby
  namespace: webby
spec:
  selector:
    app: webby
  ports:
    - port: 80
      targetPort: 8080
